# chess_engine

./: CMakeLists.txt  README.md  buildcmd.txt
src/: bitboard.h  board.cpp  board.h  eval.cpp  eval.h  move.h  movegen.cpp  movegen.h  search.cpp  search.h  tt.cpp  tt.h  uci.cpp
tests/: perft.cpp
